--- a/post.gohtml
+++ b/post.gohtml
@@ -7,7 +7,7 @@
   <title>{{.Title}} | Biome of Ideas</title>
 </head>
 <body>
-  <nav class="flex items-center justify-between bg-gray-800 p-6 mb-4">
+  <nav class="flex items-center justify-between bg-black p-6 mb-4">
     <div class="flex items-center flex-shrink-0 text-white mr-6">
       <span class="font-semibold text-xl tracking-tight">Biome of Ideas</span>
     </div>
@@ -26,8 +26,8 @@
     <div class="text-center mt-4">
         <p class="text-gray-500">Author: <a href="mailto:{{.Email}}">{{.Name}}</a></p>
     </div>
-    {{end}}
-    <div class="prose max-w-full">
+      {{end}}
+    <div>
         {{.Content}}
     </div>
   </div>
