--- a/post.gohtml
+++ b/post.gohtml
@@ -7,6 +7,16 @@
         <title>{{.Title}} | Biome of Ideas</title>
     </head>
     <body>
+        <nav>
+            <fieldset>
+	        <legend>Navigation</legend>
+                <ul>
+                    <li><a href="/">Homepage</a></li>
+	            <li><a href="/tags">All Tags</a></li>
+	            <li><a href="/about">About This Site</a></li>
+                </ul>
+	    </fieldset>
+        </nav>
         <main>
             {{.Content}}
         </main>
