--- a/static/styles.css
+++ b/static/styles.css
@@ -35,6 +35,7 @@ nav ul {
     margin: 10px;
     padding: 0px;
 }
+
 nav li {
     list-style: none;
 }
@@ -48,16 +49,17 @@ img {
     width: 100%;
 }
 
-a, a:hover {
-    color: white;
-}
-
-a:visited {
-    color: var(--gorgeous-contrast-5);
+/* Styling for links. */
+a, a:hover, a:visited {
+    color: cyan;
 }
 
 /* Stop our syntax-highlighted material from inheriting color
    settings. */
 pre {
     color: initial;
+}
+
+span.date {
+    font-style: italic;
 }
