feat: officially add the "Date" field to postData
So far this frontmatter config looks a little ragtag, but IMO it's not
bad for the first day of development. 😁

--- a/post.gohtml
+++ b/post.gohtml
@@ -18,6 +18,7 @@
 	    </fieldset>
         </nav>
         <main>
+            <span class="date">Published on {{.Date}}</span>
             {{.Content}}
         </main>
     </body>
