feat: fix styling
The syntax highlighting style can now be loaded via the frontmatter.

It looks like I've definitively solved the issue I've been having with
clobbered syntax highlighting. The trick is to avoid setting a CSS
color property on the html element; a quick toggle in the browser
console identifies this as the culprit. Instead, set it on the
individual elements like p, li, and so forth.

--- a/static/styles.css
+++ b/static/styles.css
@@ -20,9 +20,21 @@ https://www.awwwards.com/sites/veille-reputation-squad
 
 /* Limit the body element to 30 times the font size. */
 html {
-    color: white;
     background-color: var(--gorgeous-contrast-3);
     font-family: sans-serif;
+}
+
+p {
+    color: var(--gorgeous-contrast-7);
+}
+
+ul li {
+    list-style-type: "🙦";
+    padding-left: 5px;
+}
+
+ul li::marker {
+    color: var(--gorgeous-contrast-2);
 }
 
 main {
@@ -74,3 +86,5 @@ fieldset {
     color: var(--gorgeous-contrast-6);
     border-color: var(--gorgeous-contrast-6);
 }
+
+
