feat: include Slug in PublishData
This is so that we can link to the post itself from the archives page,
which is arguably the most important detail.

We could ostensibly transform the title into the slug, but in practice
we sometimes want weird titles. :) So in the end keeping the slug
around keeps things more robust.

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -20,7 +20,9 @@
         <main>
             {{ range . }}
                 <p>{{ .Date }}</p>
-                <p>{{ .Title }}</p>
+                <a href="posts/{{ .Slug }}">
+                    {{ .Title }}
+                </a>
                 <p>{{ .Summary }}</p>
             {{ end }}
         </main>
