--- a/static/styles.css
+++ b/static/styles.css
@@ -17,6 +17,7 @@ https://www.awwwards.com/sites/veille-reputation-squad
     --gorgeous-contrast-7: #e9e9e9;
     --gorgeous-contrast-8: #49c5b6;
     --gorgeous-contrast-9: cyan;
+    --flower: "🙦";
 }
 
 /* Limit the body element to 30 times the font size. */
@@ -30,7 +31,7 @@ p {
 }
 
 ul li {
-    list-style-type: "🙦";
+    list-style-type: var(--flower);
     padding-left: 5px;
 }
 
