--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -7,16 +7,7 @@
         <title>Archives | Biome of Ideas</title>
     </head>
     <body>
-        <nav>
-            <fieldset>
-                <legend>Navigation</legend>
-                <ul>
-                    <li><a href="/">Homepage</a></li>
-                    <li><a href="/tags">All Tags</a></li>
-                    <li><a href="/about">About This Site</a></li>
-                </ul>
-            </fieldset>
-        </nav>
+        {{ template "nav.html" . }}
         <main>
             <ul>
                 {{ range . }}
