feat: display tags when viewing Archives page
As a nicety, tags are also comma separated. :)

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -18,8 +18,9 @@
                         </a>
                         {{  if (gt (len .Tags) 0) }}
                             <p>
+                                {{ $numTags := (len .Tags) }}
                                 {{ range $i, $tag := .Tags }}
-                                    <span class="created">{{ $tag }},</span>
+                                    <span class="created">{{ $tag }}{{ if (lt $i (dec $numTags)) }},{{ end }}</span>
                                 {{ end }}
                             </p>
                         {{ end }}
