--- a/static/styles.css
+++ b/static/styles.css
@@ -104,4 +104,7 @@ li.published {
     margin-top: 20px;
 }
 
-
+.tags {
+    color: var(--gorgeous-contrast-6);
+    text-decoration: underline;
+}
