feat: add link to restore full archives if filtering is enabled

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -33,6 +33,9 @@
                     {{ end }}
                 {{ end }}
             </ul>
+            {{ if .FilteringEnabled }}
+                <a href="/archives"><span>Show full archives</span></a>
+            {{ end }}
         </main>
     </body>
 </html>
