feat: allow default margin for h1 + add h1 titles
This lets us not worry about finessing the styling of h1 elements
found on separate pages, for example, h1 in rendered Markdown.

--- a/gohtml/tags.gohtml
+++ b/gohtml/tags.gohtml
@@ -9,6 +9,7 @@
     <body>
         {{ template "nav.html" . }}
         <main>
+            <h1>Tags</h1>
             <ul>
                 {{ range $key, $value := . }}
                     <li class="tags"><a href="/archives?tag={{$key}}">{{ $key }}</a></li>
