feat: add underlining to h1 elements that are page titles

--- a/gohtml/index.gohtml
+++ b/gohtml/index.gohtml
@@ -9,6 +9,7 @@
     <body>
         {{ template "nav.html" . }}
         <main>
+            <h1 class="page-title">Welcome</h1>
             {{.Content}}
         </main>
     </body>
