--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -9,7 +9,7 @@
     <body>
         {{ template "nav.html" . }}
         <main>
-            <h1>Archives</h1>
+            <h1 class="page-title">Archives</h1>
             <ul>
                 {{ range .Published }}
                     {{ if .Include }}
