--- a/gohtml/tags.gohtml
+++ b/gohtml/tags.gohtml
@@ -9,7 +9,7 @@
     <body>
         {{ template "nav.html" . }}
         <main>
-            <h1>Tags</h1>
+            <h1 class="page-title">Tags</h1>
             <ul>
                 {{ range $key, $value := . }}
                     <li class="tags"><a href="/archives?tag={{$key}}">{{ $key }}</a></li>
