docs: elaborate comment on CSS color scheme vars

--- a/static/styles.css
+++ b/static/styles.css
@@ -4,8 +4,9 @@ https://visme.co/blog/website-color-schemes/
 
 Each prefix represents a theme taken from that page.
 
-Also, I decided to take some more colors from the representative site itself:
-https://www.awwwards.com/sites/veille-reputation-squad
+Also, I decided to take some more colors from the representative site
+itself: https://www.awwwards.com/sites/veille-reputation-squad, and
+even add a few that made sense (e.g. cyan.)
 */
 :root {
     --gorgeous-contrast-1: #61892f;
