feat: hide ellipses when opening details content

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -20,7 +20,7 @@
                                 {{ .Title }}
                             </a>
                             <details>
-                                <summary class="meta"><span>[...]</span></summary>
+                                <summary class="meta">[<span>...</span>]</summary>
                                 <p class="summary">{{ .Summary }}</p>
                             </details>
                             {{  if (gt (len .Tags) 0) }}
