--- a/static/styles.css
+++ b/static/styles.css
@@ -100,6 +100,12 @@ fieldset {
     border-color: var(--gorgeous-contrast-6);
 }
 
+section {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 /* Custom classes */
 li.published {
     margin-bottom: 20px;
