--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -23,19 +23,23 @@
                             </summary>
 
                             <!-- Content of the details element. -->
-                            <p class="summary">{{ .Summary }}</p>
-                            {{  if (gt (len .Tags) 0) }}
-                                {{ $numTags := (len .Tags) }}
-                                <div>
-                                    {{ range $i, $tag := .Tags }}
-                                        <a href="/archives?tag={{ $tag }}"><span class="tags">{{ $tag }}</span></a>{{ if (lt $i (dec $numTags)) }},{{ end }}
-                                    {{ end }}
-                                </div>
-                            {{ end }}
-                            {{ if (gt .Updated .Created) }}
-                                <br>
-                                <p><span class="updated">Updated on {{ (humanReadable .Updated) }}</span></p>
-                            {{ end }}
+                            <div>
+                                <p class="summary">{{ .Summary }}</p>
+                                {{  if (gt (len .Tags) 0) }}
+                                    {{ $numTags := (len .Tags) }}
+                                    <div>
+                                        <span class="meta">Tags: </span>
+
+                                        {{ range $i, $tag := .Tags }}
+                                            <a href="/archives?tag={{ $tag }}"><span class="tags">{{ $tag }}</span></a>{{ if (lt $i (dec $numTags)) }}<span class="meta">,</span>{{ end }}
+                                        {{ end }}
+                                    </div>
+                                {{ end }}
+                                {{ if (gt .Updated .Created) }}
+                                    <br>
+                                    <p><span class="updated">Updated on {{ (humanReadable .Updated) }}</span></p>
+                                {{ end }}
+                            </div>
                         </details>
                     {{ end }}
                 {{ end }}
