style: put slug URL markup on one line

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -17,9 +17,7 @@
                         <details class="published">
                             <summary>
                                 <span class="created">{{ (humanReadable .Created) }}: </span>
-                                <a href="posts/{{ .Slug }}">
-                                    {{ .Title }}
-                                </a>
+                                <a href="posts/{{ .Slug }}">{{ .Title }}</a>
                             </summary>
 
                             <!-- Content of the details element. -->
