feat: add a "more" link after the summary
This is to keep the reader engaged into wanting to read the whole
blog, rather than having to recuperate context and move the mouse (or
else direct their attention) back to the original link.

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -22,7 +22,7 @@
 
                             <!-- Content of the details element. -->
                             <div>
-                                <p class="summary">{{ .Summary }}</p>
+                                <p class="summary">{{ .Summary }} <a href="posts/{{ .Slug }}">(more)</a></p>
                                 {{  if (gt (len .Tags) 0) }}
                                     {{ $numTags := (len .Tags) }}
                                     <div>
