--- a/gohtml/posts.gohtml
+++ b/gohtml/posts.gohtml
@@ -8,7 +8,7 @@
     </head>
     <body>
          {{ template "nav.html" . }}
-        <main>
+        <main class="post-content">
            {{.Content}}
         </main>
     </body>
