feat: reinclude "archive restoration link" as a section child

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -41,6 +41,10 @@
                         </details>
                     {{ end }}
                 {{ end }}
+
+                {{ if (ne $tagFilter "") }}
+                    <a href="/archives">(show all archives)</a>
+                {{ end }}
             </section>
         </main>
     </body>
