feat: sort Archives pages
So far so good - we don't publishing.json anymore.

However, some thoughts:

1. types.PublishData needs to be revisited, since we should no longer
use Unix timestamps; we should only rely on time.Time if possible.

2. The funcMap used by the templates can be simplified. What's there
currently is a patch to allow the current design to fall through.

3. The body of the GET /archives2 endpoint itself can be refactored
into smaller functions, especially so that we can get rid of all the
HTTP error reports (substituting them with, say, only one such report
that comes from a "regular" Go function.)

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -16,7 +16,7 @@
                     {{ if (or (eq $tagFilter "") (hasTag $tagFilter .Tags)) }}
                         <details class="published">
                             <summary>
-                                <span class="created">{{ (humanReadable .Created) }}: </span>
+                                <span class="created">{{ (dateOnly .Date) }}: </span>
                                 <a href="posts/{{ .Slug }}">{{ .Title }}</a>
                             </summary>
 
@@ -32,10 +32,6 @@
                                             <a href="/archives?tag={{ $tag }}"><span class="tags">{{ $tag }}</span></a>{{ if (lt $i (dec $numTags)) }}<span class="meta">,</span>{{ end }}
                                         {{ end }}
                                     </div>
-                                {{ end }}
-                                {{ if (gt .Updated .Created) }}
-                                    <br>
-                                    <p><span class="updated">Updated on {{ (humanReadable .Updated) }}</span></p>
                                 {{ end }}
                             </div>
                         </details>
