--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -12,17 +12,17 @@
             <h1 class="page-title"><a href="/archives">Archives</a></h1>
             <section>
                 {{ $tagFilter := .Tag }}
-                {{ range .Published }}
+                {{ range .Posts }}
                     {{ if (or (eq $tagFilter "") (hasTag $tagFilter .Tags)) }}
                         <details class="published">
                             <summary>
-                                <span class="created">{{ (humanReadable .Created) }}: </span>
-                                <a href="posts/{{ .Slug }}">{{ .Title }}</a>
+                                <span class="created">{{ (humanReadable .Date) }}: </span>
+                                <a href="posts/{{ (humanReadable .Date) }}">{{ .Title }}</a>
                             </summary>
 
                             <!-- Content of the details element. -->
                             <div>
-                                <p class="summary">{{ .Summary }} <a href="posts/{{ .Slug }}">(more)</a></p>
+                                <p class="summary">{{ .Summary }} <a href="posts/{{ (humanReadable .Date) }}">(more)</a></p>
                                 {{  if (gt (len .Tags) 0) }}
                                     {{ $numTags := (len .Tags) }}
                                     <div>
@@ -32,10 +32,6 @@
                                             <a href="/archives?tag={{ $tag }}"><span class="tags">{{ $tag }}</span></a>{{ if (lt $i (dec $numTags)) }}<span class="meta">,</span>{{ end }}
                                         {{ end }}
                                     </div>
-                                {{ end }}
-                                {{ if (gt .Updated .Created) }}
-                                    <br>
-                                    <p><span class="updated">Updated on {{ (humanReadable .Updated) }}</span></p>
                                 {{ end }}
                             </div>
                         </details>
