--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -11,35 +11,29 @@
         <main>
             <h1 class="page-title"><a href="archives">Archives</a></h1>
             <section>
-                {{ $tagFilter := .Tag }}
-                {{ range .Posts }}
-                    {{ if (or (eq $tagFilter "") (hasTag $tagFilter .Tags)) }}
-                        <details class="published">
-                            <summary>
-                                <span class="created">{{ (humanReadable .Date) }}: </span>
-                                <a href="posts/{{ (humanReadable .Date) }}">{{ .Title }}</a>
-                            </summary>
+                <!-- Range over the slice of posts provided here, which may or may not have been first filtered by tag. -->
+                {{ range . }}
+                    <details class="published">
+                        <summary>
+                            <span class="created">{{ (humanReadable .Date) }}: </span>
+                            <a href="posts/{{ (humanReadable .Date) }}">{{ .Title }}</a>
+                        </summary>
 
-                            <!-- Content of the details element. -->
-                            <div>
-                                <p class="summary">{{ .Summary }} <a href="posts/{{ (humanReadable .Date) }}">(more)</a></p>
-                                {{  if (gt (len .Tags) 0) }}
-                                    {{ $numTags := (len .Tags) }}
-                                    <div>
-                                        <span class="meta">Tags: </span>
+                        <!-- Content of the details element. -->
+                        <div>
+                            <p class="summary">{{ .Summary }} <a href="posts/{{ (humanReadable .Date) }}">(more)</a></p>
+                            {{  if (gt (len .Tags) 0) }}
+                                {{ $numTags := (len .Tags) }}
+                                <div>
+                                    <span class="meta">Tags: </span>
 
-                                        {{ range $i, $tag := .Tags }}
-                                            <a href="archives?tag={{ $tag }}"><span class="tags">{{ $tag }}</span></a>{{ if (lt $i (dec $numTags)) }}<span class="meta">,</span>{{ end }}
-                                        {{ end }}
-                                    </div>
-                                {{ end }}
-                            </div>
-                        </details>
-                    {{ end }}
-                {{ end }}
-
-                {{ if (ne $tagFilter "") }}
-                    <a href="archives">(show all archives)</a>
+                                    {{ range $i, $tag := .Tags }}
+                                        <a href="archives?tag={{ $tag }}"><span class="tags">{{ $tag }}</span></a>{{ if (lt $i (dec $numTags)) }}<span class="meta">,</span>{{ end }}
+                                    {{ end }}
+                                </div>
+                            {{ end }}
+                        </div>
+                    </details>
                 {{ end }}
             </section>
         </main>
