feat: continue migrating "Archives" nomenclature into "Posts"

--- a/gohtml/archives.gohtml
+++ b/gohtml/archives.gohtml
@@ -9,7 +9,7 @@
     <body>
         {{ template "nav.html" . }}
         <main>
-            <h1 class="page-title"><a href="posts">Archives</a></h1>
+            <h1 class="page-title"><a href="posts">Posts</a></h1>
             <section>
                 <!-- Range over the slice of posts provided here, which may or may not have been first filtered by tag. -->
                 {{ range . }}
