--- a/gohtml/projects.gohtml
+++ b/gohtml/projects.gohtml
@@ -7,6 +7,7 @@
         <title>Archives</title>
     </head>
     <body>
+        {{ template "nav.html" . }}
         <main class="project-gallery">
             <section class="project-entry">
                 <h2 class="meta">Project 1</h2>
