--- a/gohtml/index.gohtml
+++ b/gohtml/index.gohtml
@@ -4,13 +4,41 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/static/styles.css">
-        <title>{{.Title}}</title>
+        <title>{{ with (index . 0) }}{{.Title}}{{ end }}</title>
     </head>
     <body>
         {{ template "nav.html" . }}
         <main>
             <h1 class="page-title">Welcome</h1>
-            {{.Content}}
+            {{ with (index . 0) }}
+                {{ .Content }}
+            {{ end }}
+
+            <section>
+                {{ range (slice . 1) }}
+                    <details class="published">
+                        <summary>
+                            <span class="created">{{ (humanReadable .Date) }}: </span>
+                            <a href="posts/{{ (humanReadable .Date) }}">{{ .Title }}</a>
+                        </summary>
+
+                        <!-- Content of the details element, where we display the summary of the blog post and so forth. -->
+                        <div>
+                            <p class="summary">{{ .Summary }} <a href="posts/{{ (humanReadable .Date) }}">(more)</a></p>
+                            {{  if (gt (len .Tags) 0) }}
+                                {{ $numTags := (len .Tags) }}
+                                <div>
+                                    <span class="meta">Tags: </span>
+
+                                    {{ range $i, $tag := .Tags }}
+                                        <a href="posts?tag={{ $tag }}"><span class="tags">{{ $tag }}</span></a>{{ if (lt $i (dec $numTags)) }}<span class="meta">,</span>{{ end }}
+                                    {{ end }}
+                                </div>
+                            {{ end }}
+                        </div>
+                    </details>
+                {{ end }}
+            </section>
         </main>
     </body>
 </html>
